force-app/main/default/objects/Knowledge_Feedback__c/Knowledge_Feedback__c.object-meta.xml
<CustomObject>
    <description>Stores Knowledge Base Suggested Edits</description>
    <label>Knowledge Feedback</label>
    <nameField>
        <displayFormat>FB-{0000000000}</displayFormat>
        <label>Knowledge Article ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Knowledge Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>