force-app/main/default/objects/Knowledge_Feedback__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <description>Article Feedback</description>
    <inlineHelpText>Feedback in relation to the KB Article</inlineHelpText>
    <label>Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>