force-app/main/default/objects/Knowledge_Feedback__c/fields/Knowledge_Article__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Knowledge Article</label>
    <referenceTo>Knowledge__kav</referenceTo>
    <relationshipLabel>Knowledge Feedbacks</relationshipLabel>
    <relationshipName>Knowledge_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>