force-app/main/default/objects/Knowledge_Feedback__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>The Product that this feedback relates to</description>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>