force-app/main/default/objects/Knowledge_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Knowledge_Article__c</columns>
    <columns>Product__c</columns>
    <columns>Sentiment__c</columns>
    <columns>Feedback__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>