force-app/main/default/objects/Knowledge_Feedback__c/listViews/All_DLC_Content.listView-meta.xml
<ListView>
    <fullName>All_DLC_Content</fullName>
    <columns>NAME</columns>
    <columns>Knowledge_Article__c</columns>
    <columns>Product__c</columns>
    <columns>Sentiment__c</columns>
    <columns>Feedback__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>LMS</value>
    </filters>
    <label>All DLC Content</label>
</ListView>