force-app/main/default/objects/Knowledge_Feedback__c/listViews/Copy_of_All_EDU_Content.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_EDU_Content</fullName>
    <columns>NAME</columns>
    <columns>Knowledge_Article__c</columns>
    <columns>Product__c</columns>
    <columns>Sentiment__c</columns>
    <columns>Feedback__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>contains</operation>
        <value>Edu</value>
    </filters>
    <label>All EDU Content</label>
</ListView>