force-app/main/default/objects/Knowledge_Feedback__c/listViews/Last_30_Days.listView-meta.xml
<ListView>
    <fullName>Last_30_Days</fullName>
    <columns>NAME</columns>
    <columns>Knowledge_Article__c</columns>
    <columns>Product__c</columns>
    <columns>Sentiment__c</columns>
    <columns>Feedback__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Last 30 Days</label>
</ListView>